Fixed OutlineTitleArea overlap in mednotes

--- a/mednotes/css/custom.css
+++ b/mednotes/css/custom.css
@@ -2,6 +2,10 @@
     overflow: visible !important;
 }
 
+.OutlineTitleArea {
+    opacity: 0;
+}
+
 #includedContent {
     padding-top: 20px;
     margin-left: 350px;
